basic.hpp: Remove template parameter-list

Introduced with c++20

See:
https://gcc.gnu.org/bugzilla/show_bug.cgi?id=97202

Till there's a proper solution(?).

                from src/net/serveracceptwebhelper.h:36,
                 from src/net/common/serveracceptwebhelper.cpp:32:
src/third_party/websocketpp/websocketpp/logger/basic.hpp:61:54: error: expected ‘)’ before ‘h’
   61 |     basic<concurrency,names>(channel_type_hint::value h =
      |                             ~

etc.